--- a/Home/tonari/tonari.css
+++ b/Home/tonari/tonari.css
@@ -24,45 +24,41 @@ h1 {
   font-size: 2rem;
   margin: 0;
   letter-spacing: 1rem;
+  margin-bottom: 50px;
 }
-h3 {
-  font-size: 1rem;
-  letter-spacing: 0.3rem;
-  opacity: 0.6;
+/*------------------introduction box-----------------------*/
+.box {
+  width: 500px;
+  height: auto;
+  position: relative;
+  text-align: left;
+  padding:0.25em 1em;
+}
+.box:before,.box:after{ 
+  content:'';
+  width: 20px;
+  height: 30px;
+  position: absolute;
+  display: inline-block;
+}
+.box:before{
+  border-left: solid 1px #5767bf;
+  border-top: solid 1px #5767bf;
+  top:0;
+  left: 0;
+}
+.box:after{
+  border-right: solid 1px #5767bf;
+  border-bottom: solid 1px #5767bf;
+  bottom:0;
+  right: 0;
+}
+.box p {
+  font-size: 13px;
+  margin: 0; 
+  padding: 0;
 }
 
-.line_container{
-  display: flex;
-  justify-content: left;
-  align-items: left;
-  height: 100%;
-  width: 210px;
-  position: fixed;
-  left: 0;
-  top: 70px;
-  background: #eee;
-}
-.line-container:hover{
-  position: fixed;
-  left: 0;
-  top: 70px;
-  
-}
-.line-tab {
-  display: flex;
-  justify-content: left;
-  align-items: left;
-  flex: 1;
-  color: rgb(109, 105, 105);
-  letter-spacing: 0.1rem;
-  transition: all 0.5s ease;
-  font-size: 1rem;
-}
-.line-tab:hover {
-  color:rgb(231, 224, 181);
-  background: #e2d58b;
-  transition: all 0.5s ease;
-}
 .tonari-container {
   display: flex;
   flex-direction: row;
@@ -144,18 +140,18 @@ h3 {
   
   @media screen and (min-width: 768px) {
     .page-wrap.tog .page-content {
-      padding-left: 280px;
+      padding-left: 220px;
     }
   }
   /*----------------leftbar-wrap----------------*/
   
   .leftbar-wrap {
-    width: 260px;
+    width: 210px;
     height: 100%;
     max-height: 100%;
     position: fixed;
-    top: 70px;
-    left: -280px;
+    top: 100px;
+    left: -220px;
     z-index: 999;
   }
   
@@ -170,6 +166,29 @@ h3 {
     color: #96938b;
   }
   
+  /*---------------------------main----------------------------*/
+
+  .main .home{
+      background-color: #f3e9ae;
+  }
+  .main .social{
+      background-color: #f3a310;
+  }
+  .main .business{
+      background-color: aqua;
+  }
+  .main .health{
+      background-color: pink;
+  }
+  .main .theology{
+      background-color: #91812b;
+  }
+  .main .engineer{
+      background-color: #b375a0;
+  }
+  .main .sw{
+      background-color: chartreuse;
+  }
   /*----------------------leftbar-menu-------------------------*/
   
   .leftbar-wrap .leftbar-menu {
@@ -178,32 +197,39 @@ h3 {
   
   .leftbar-wrap .leftbar-menu .header-menu span {
     font-weight: bold;
-    font-size: 14px;
+    font-size: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 30px;
+    padding-top: 10px;
     color: rgb(13, 14, 13);
+    /* border line */
+    transform: translateX(10%);/*位置調整*/
+    border-length: 30px;
+    border-radius: 5px;
+    border-bottom: solid 5px rgb(238, 212, 128);
   }
   
-  .leftbar-wrap .leftbar-menu ul li a {
+  .leftbar-wrap .leftbar-menu ul a {
     display: inline-block;
     width: 100%;
     text-decoration: none;
     position: relative;
-    padding: 8px 20px 10px 20px; /*padding: 上、右、下、左*/
+    padding: 8px 20px 0px 20px; /*padding: 上、右、下、左*/
   }
-  
-  .leftbar-wrap .leftbar-menu ul li a i {
+  .leftbar-wrap .leftbar-menu ul a i {
     margin-right: 10px;
-    font-size: 12px;
+    font-size: 11px;
     width: 30px;
     height: 30px;
     line-height: 30px;
     text-align: center;
     border-radius: 4px;
   }
-  
+
+  .leftbar-wrap .leftbar-menu span {
+    font-size: 14px;
+  }
   .leftbar-wrap .leftbar-menu ul li a:hover > i::before {
     display: inline-block;
     animation: swing ease-in-out 0.5s 1 alternate;
@@ -227,14 +253,20 @@ h3 {
   }
   
   .leftbar-wrap .leftbar-menu .leftbar-dropdown .leftbar-submenu ul {
-    padding: 5px 0;
+    padding-left: 25px;
   }
   
   .leftbar-wrap .leftbar-menu .leftbar-dropdown .leftbar-submenu li {
-    padding-left: 25px;
     font-size: 13px;
   }
-  
+  .leftbar-wrap .leftbar-menu .leftbar-dropdown .leftbar-submenu li :hover{     
+    color:rgb(20, 20, 20);
+    background: #e2d58b;
+    -webkit-transform: translate(0, 3px);
+    transform: translate(0, 3px);
+    -webkit-box-shadow: 0 2px 0 #e6d900;
+    box-shadow: 0 2px 0 #fdf107;
+  }
   .leftbar-wrap .leftbar-menu .leftbar-dropdown .leftbar-submenu li a:before {
     content: "\f111";
     font-weight: 400;
@@ -248,19 +280,6 @@ h3 {
     font-size: 8px;
   }
   
-  .leftbar-wrap .leftbar-menu ul li a span.label,
-  .leftbar-wrap .leftbar-menu ul li a span.badge {
-    float: right;
-    margin-top: 8px;
-    margin-left: 5px;
-  }
-  
-  .leftbar-wrap .leftbar-menu .leftbar-dropdown .leftbar-submenu li a .badge,
-  .leftbar-wrap .leftbar-menu .leftbar-dropdown .leftbar-submenu li a .label {
-    float: right;
-    margin-top: 0px;
-  }
-  
   .leftbar-wrap .leftbar-menu .leftbar-submenu {
     display: none;
   }
@@ -270,13 +289,4 @@ h3 {
     right: 17px;
   }
   
-  /*-----------------------------wrapper-------------------------------------------------*/
- 
-  .wrapper .leftbar-wrap ul li:hover a i,
-  .wrapper .leftbar-wrap .leftbar-dropdown .leftbar-submenu li a:hover:before,
-  .wrapper .leftbar-wrap .sidebar-search input.search-menu:focus+span,
-  .wrapper .leftbar-wrap .leftbar-menu .leftbar-dropdown.active a i {
-      color: #b375a0;
-      text-shadow:0px 0px 10px rgba(151, 150, 147, 0.5);
-  }
   
