--- a/Home/tonari/tonari.css
+++ b/Home/tonari/tonari.css
@@ -8,29 +8,27 @@ a {
 /*----------------------------Main box----------------------------*/
 .tonari-tabs,
 .tonari-slide {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  display: flex;
+  flex-direction: column;
   position: fixed;
   width: 100%;
   height: 100vh;		/*vh：高さに対する割合。100vhは画面の高さと同じ（100%）*/
   position: relative;
   background: #eee;
-  text-align: center;
   padding: 0 2em;
 }
 .tonari2-slide {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  display: flex;
+  flex-direction: column;
   position: fixed;
   width: 100%;
   height: 200vh;		/*vh：高さに対する割合。100vhは画面の高さと同じ（100%）*/
   position: relative;
   background: #eee;
-  text-align: center;
   padding: 0 2em;
 }
 h1 {
@@ -40,41 +38,9 @@ h1 {
   margin-bottom: 50px;
 }
 .rest .box h3{
-  text-align: center;
   font-size: 20px;
 }
-/*------------------introduction box-----------------------*/
-.box {
-  width: 500px;
-  height: auto;
-  position: relative;
-  text-align: left;
-  padding:0.25em 1em;
-}
-.box:before,.box:after{ 
-  content:'';
-  width: 20px;
-  height: 30px;
-  position: absolute;
-  display: inline-block;
-}
-.box:before{
-  border-left: solid 1px #5767bf;
-  border-top: solid 1px #5767bf;
-  top:0;
-  left: 0;
-}
-.box:after{
-  border-right: solid 1px #5767bf;
-  border-bottom: solid 1px #5767bf;
-  bottom:0;
-  right: 0;
-}
-.box p {
-  font-size: 13px;
-  margin: 0; 
-  padding: 0;
-}
+
 /*----------------------------top tag---------------------------*/
 .tonari-container {
   display: flex;
@@ -211,7 +177,11 @@ h1 {
   /*----------------------leftbar-menu-------------------------*/
   
   .leftbar-wrap .leftbar-menu {
-    padding: 0px;
+    margin-top: -30px;
+    margin-right: -10px;
+    padding-right: 50px;
+    height: 100vh;
+    background-color: rgb(225, 228, 230);
   }
   
   .leftbar-wrap .leftbar-menu .header-menu span {
@@ -220,7 +190,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 10px;
+    padding-top: 30px;
     color: rgb(13, 14, 13);
     /* border line */
     transform: translateX(10%);/*位置調整*/
@@ -253,7 +223,6 @@ h1 {
     display: inline-block;
     animation: swing ease-in-out 0.5s 1 alternate;
   }
-  
   .leftbar-wrap .leftbar-menu .leftbar-dropdown > a:after {
     font-weight: 900;
     content: "\f105";
@@ -265,18 +234,21 @@ h1 {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
-    background: 0 0;
     position: absolute;
     right: 15px;
     top: 14px;
   }
   
   .leftbar-wrap .leftbar-menu .leftbar-dropdown .leftbar-submenu ul {
-    padding-left: 25px;
+    padding-right: 20px;
   }
   
   .leftbar-wrap .leftbar-menu .leftbar-dropdown .leftbar-submenu li {
     font-size: 13px;
+    margin-left: 30px;
+    margin-right: -30px;
+    margin-bottom: 2px;
+    background: #fff;
   }
   .leftbar-wrap .leftbar-menu .leftbar-dropdown .leftbar-submenu li :hover{     
     color:rgb(20, 20, 20);
